--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
+/* body part */
 body {
   padding: 0;
   margin: 0;
   background: #FDEFEF;
   color: #fff;
-  font-size: 1.5rem;
+  font-family: 'Inter', sans-serif;
+}
+*{
+  box-sizing: border-box;
 }
 
+/* end body part */
 nav {
   height: 10vh;
-  width: 98vw;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #082032;
-  padding: 0 1vw;
+  padding: 0 3vw;
 }
 
 button {
@@ -27,19 +32,7 @@ button {
   cursor: pointer;
 }
 
-.main {
-  display: flex;
-  justify-content: center;
-}
-
-.el {
-  background: #3498db;
-  margin: 0 .1vw;
-}
-
-.targeted {
-  background: #FF4C29 !important;
-}
+/* algorithm selection */
 
 input[type="radio"] {
   display: none;
@@ -54,4 +47,20 @@ label {
 input[type="radio"]:checked+label {
   font-weight: bold;
   text-transform: uppercase;
+}
+/* end algorithm selection */
+
+/* columns part */
+.main {
+  display: flex;
+  justify-content: center;
+}
+
+.el {
+  background: #3498db;
+  margin: 0 .1vw;
+}
+
+.targeted {
+  background: #FF4C29 !important;
 }
